[gd_scene load_steps=3 format=2]

[ext_resource path="res://scene/hud/new_dynamicfont.tres" type="DynamicFont" id=1]
[ext_resource path="res://scene/hud/Hud.gd" type="Script" id=2]

[node name="Hud" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="MessageLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -198.0
margin_top = -36.0
margin_right = 198.0
margin_bottom = 36.0
custom_fonts/font = ExtResource( 1 )
text = "Coin Dash!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = 10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="MarginContainer"]
margin_right = 1024.0
margin_bottom = 72.0
custom_fonts/font = ExtResource( 1 )

[node name="TimeLabel" type="Label" parent="MarginContainer"]
margin_right = 1024.0
margin_bottom = 72.0
custom_fonts/font = ExtResource( 1 )
align = 2

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -20.5
margin_top = -26.4
margin_right = 20.5
margin_bottom = -5.0
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
[connection signal="pressed" from="StartButton" to="." method="_on_Button_pressed"]
